--- a/index.html
+++ b/index.html
@@ -15,32 +15,27 @@
 
   <a href="#" class="cancel">×</a>
   <h1 class="title">Find your shop</h1>
-  <input class="input" align=center placeholder="search..."  type="text" id="shop" name="">
+  <input class="input" placeholder="search..."  type="text" id="shop" name="">
   <div class="shops" id="shop_list">
 
 
 
   </div>
-  <h1 class="title" >Select an offer</h1>
-    <div class="shops" id="offer_list">
-
-    	<div class="offer" style="background-color: #FEC9A7">
-    		<h1> 10%</h1>
-    		<p>Discount card</p>
-    		<b>Payout value: <font color="#656565"> 32 </font> rs/ref</b>
-    	</div>
-    	<div class="offer" style="background-color: #FEFD97">
-    		<h1> 5%</h1>
-    		<p>Discount card</p>
-    		<b style="text-align: center;">Payout value: <font color="#656565"> 10 </font> rs/ref</b>
-    	</div>
-    	 <div class="offer" style="background-color: #C5EBFE">
-    		<h1> 25%</h1>
-    		<p>Discount card</p>
-    		<b>Payout value: <font color="#656565"> 5 </font> rs/ref</b>
-    	</div>
-
+<section class="cards-wrapper">
+  <div class="card-grid-space">
+    <div class="card" href="" >
+    	<p class="pay">Payout: 750 </p>
+        <h1>Mega offer</h1>
+        <p>Lorem ipsum elit exercitation sint adipisicing consectetur velit amet voluptate nulla. </p>
+        <div class="date">6 Oct 2017</div>
+        <div class="tags">
+          <div class="tag">Krishna</div>
+          <div class="tag">restaurant</div>
+        </div>
+    </div>
   </div>
+</section>
+
   <div class="button_cont" align="center"><a class="example_e" href="#" >Submit</a></div>
   </div>
 
